[Fix] replaced toList instances in commons and missing hostID in GameStateService